--- a/src/index.html
+++ b/src/index.html
@@ -6,3 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Test</title>
 </head>
+<body class="text-center">
+  <div id="catagories" class="catagories">
+    
+    <div id="types" class="d-flex flex-wrap"></div>
+  </div>
+  <div id="types-page" class="page-container hide">
+    <button type="button" class="btn btn-secondary float-left" id="toCatagoriesBtn">Back to Boards</button>
+    <h1>Products</h1>
+    <div id="products-on-types" class="d-flex flex-wrap"></div>
+  </div>
+</body>
+</html>
